[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dowker_trajectories"
version = "0.0.0"
description="Compute Dowker Persistence for Dynamical Systems Trajectories"
readme = "README.md"
authors = [
  { name = "Author 1", email = "email1@math.edu" },
]
requires-python = ">=3.10"
dependencies = [
  "pytest>=7.4.0",
  "gudhi>=3.11.0",
  "numpy>=2.2.5",
  "networkx",
  "scipy", # dependency for networkx adjacency matrix
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dowker_trajectories*"]


[tool.setuptools.package-data]
"dowker_trajectories.Data" = ["**/*.npy", "**/*.txt", "**/*.nc"]